# sparseSpatialSampling

./: .gitignore  .readthedocs.yaml  README.md  __init__.py  example_jobscript  main.py  pyproject.toml  requirements.txt  source_path
code/: export_data.py  main.py  s3_implementation.py
docs/: Makefile
examples/: parameter_study_variance_vs_cells.py  s3_for_OAT15_airfoil.py  s3_for_cylinder2D.py  s3_for_cylinder2D_Re100.py  s3_for_cylinder3D_Re3900.py  s3_for_surfaceMountedCube.py  s3_for_surfaceMountedCube_large.py
post_processing/: analyze_force_coefficients_cube.py  animate_fields.py  compare_dmd.py  compare_dmd_OAT.py  compare_execution_times_s_cube.py  compare_svd.py  compare_svd_OAT.py  compare_svd__results_s_cube.py  compare_svd_cube.py  compare_svd_cylinder3D_Re3900.py  compare_svd_results_s_cube.py  compute_error.py  compute_error_OAT.py  compute_svd_original_cube.py  compute_svd_original_cylinder.py  parameter_study_variance_vs_cells.py  plot_results_parameter_study_variance.py  s3_for_OAT15_airfoil.py
s_cube/: __init__.py  const.py  data.py  execute_grid_generation.py  export.py  export_data.py  geometry.py  geometry_base.py  load_data.py  s_cube.py  sparse_spatial_sampling.py  utils.py
sparseSpatialSampling/: const.py  data.py  export.py  geometry.py  geometry_base.py  s_cube.py  sparse_spatial_sampling.py  utils.py
tests/: s_cube_test_dataset.h5  test_assignment_neighbors.py  test_assignment_nodes.py  test_masking_domain_objects_2d.py  test_masking_domain_objects_3d.py  test_masking_geometry_objects.py  test_masking_geometry_objects_2d.py  (+2 more)
(+62 files in other folders)
